--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     "require": {
         "php" : ">=5.5.0",
         "symfony/dom-crawler": "^3.0",
-        "symfony/css-selector": "^3.0"
+        "symfony/css-selector": "^3.0",
+        "aura/router": "^3.0"
     },
     "require-dev": {
         "phpunit/phpunit" : "4.*",
@@ -45,4 +46,3 @@
         }
     }
 }
-
