--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "php" : ">=5.5.0",
         "symfony/dom-crawler": "^3.0",
         "symfony/css-selector": "^3.0",
-        "aura/router": "^3.0"
+        "league/route": "^1.2"
     },
     "require-dev": {
         "phpunit/phpunit" : "4.*",
