--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "php" : ">=5.5.0",
         "symfony/dom-crawler": "^3.0",
         "symfony/css-selector": "^3.0",
-        "league/route": "^1.2"
+        "league/route": "^1.2",
+        "twig/twig": "~1.0"
     },
     "require-dev": {
         "phpunit/phpunit" : "4.*",
