--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "symfony/dom-crawler": "^3.0",
         "symfony/css-selector": "^3.0",
         "league/route": "^1.2",
-        "twig/twig": "~1.0"
+        "twig/twig": "~1.0",
+        "evista/perform": "^1.0@dev"
     },
     "require-dev": {
         "phpunit/phpunit" : "4.*",
@@ -45,5 +46,12 @@
         "branch-alias": {
             "dev-master": "1.0-dev"
         }
-    }
+    },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url":  "https://github.com/balintsera/evista-perform.git"
+        }
+    ],
+    "minimum-stability": "dev"
 }
