--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "symfony/css-selector": "^3.0",
         "league/route": "^1.2",
         "twig/twig": "~1.0",
-        "evista/perform": "^1.0@dev"
+        "evista/perform": "^1.0@dev",
+        "doctrine/collections": "^1.3"
     },
     "require-dev": {
         "phpunit/phpunit" : "4.*",
