--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "league/route": "^1.2",
         "twig/twig": "~1.0",
         "evista/perform": "^1.0@dev",
-        "doctrine/collections": "^1.3"
+        "doctrine/collections": "^1.3",
+        "twbs/bootstrap": "^3.3"
     },
     "require-dev": {
         "phpunit/phpunit" : "4.*",
